<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="setting"
        android:title="@string/setting">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="isSafe"
            android:persistent="true"
            android:summaryOff="@string/r18"
            android:summaryOn="@string/normal"
            android:textColor="@color/vanillaTextColor"
            android:title="@string/image_rating" />

        <Preference
            android:key="update"
            android:title="@string/update_tags" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/about">

        <Preference
            android:summary="https://yande.re"
            android:title="@string/source" />

        <Preference
            android:key="license"
            android:summary="@string/open_source_licenses"
            android:title="@string/licenses" />

        <Preference
            android:summary="nil"
            android:title="@string/author" />


    </PreferenceCategory>

</PreferenceScreen>
